# emmOS

./: Cargo.toml  build.rs  out.txt  tests_out.txt
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  globals.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_alloc.rs  should_panic.rs  stack_overflow.rs
